<resources>
    <string name="app_name">Citizenship</string>
    <string name="page_title">Page %1$d of %2$d</string>
    <string name="welcome_message">Welcome to the Citizenship app!</string>
    <string name="select_practice_length">Select practice length:</string>
    <string name="short_length">Short (10)</string>
    <string name="med_length">Medium (25)</string>
    <string name="full_length">Full (100)</string>
    <string name="complete_title">Practice Complete</string>
    <string name="show_answer">Show Answer</string>
    <string name="next_question">Next Question</string>
    <string name="complete">Practice complete!</string>
    <string name="advance">Advance</string>
    <string name="home">Home</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="exit_message">Exiting will end your current practice session.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="favorites">Favorites (%1$d)</string>
    <string name="confirm_removal">Confirm Removal</string>
    <string name="removal_message">This question will be removed from your favorites.</string>
    <string name="remove">Remove</string>
    <string name="manage_favorites">Manage Favorites</string>
    <string name="comma">,</string>
    <string name="empty" />

</resources>
