<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/welcome_message"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/select_practice_length"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <Button
            android:id="@+id/short_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_2"
            android:text="@string/short_length" />

        <Button
            android:id="@+id/med_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/short_button"
            android:text="@string/med_length" />

        <Button
            android:id="@+id/long_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/med_button"
            android:text="@string/full_length" />

        <Button
            android:id="@+id/favorites_practice_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/long_button"
            android:text="@string/favorites" />

        <Button
            android:id="@+id/manage_favorites_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/favorites_practice_button"
            android:text="@string/manage_favorites" />

    </RelativeLayout>

</ScrollView>