<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:fillViewport="true">

        <TextView
            android:id="@+id/answer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@android:color/black"
            android:textColor="@android:color/transparent"
            android:textSize="20sp"
            tools:text="This is a test" />

    </ScrollView>

    <Button
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_answer" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jumpToPage"
        android:text="@string/next_question"
        android:visibility="gone" />

    <Button
        android:id="@+id/advance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jumpToPage"
        android:text="@string/advance"
        android:visibility="gone" />

</LinearLayout>